# hugs98-plus-Sep2006

./: .cvsignore  .gitignore  .travis.yml  Makefile  MkDefs.in  README.md  RPM.mk  Readme  aclocal.m4  configure  configure.ac  fp-platform  hugs98.nsi  hugs98.spec  winmake.bat
ac_macros/: ice_prog_cpp_traditional.m4
cpphs/: CHANGELOG  Makefile  Makefile.nhc98  README  cpphs.cabal  cpphs.spec
cpphs/docs/: index.html
cpphs/tests/: expect10  expect15  expect19  expect22  expect27  expect29  expect30  expect31  expect4  expect5  expect7  expect9  runtests
debian/: changelog  control  control.in  hugs.README.Debian  hugs.doc-base  hugs.docs  hugs.examples  hugs.install  hugs.links  hugs.manpages  hugs.menu  hugs.postinst  hugs.postrm  hugs.preinst  hugs.prerm  libhugs-alut-bundled.README.Debian  libhugs-alut-bundled.examples  libhugs-alut-bundled.install  libhugs-base-bundled.README.Debian  libhugs-base-bundled.install  libhugs-cabal-bundled.README.Debian  libhugs-cabal-bundled.examples  libhugs-cabal-bundled.install  libhugs-fgl-bundled.README.Debian  libhugs-fgl-bundled.copyright  libhugs-fgl-bundled.install  libhugs-glut-bundled.README.Debian  libhugs-glut-bundled.examples  libhugs-glut-bundled.install  libhugs-haskell-src-bundled.README.Debian  libhugs-haskell-src-bundled.examples  libhugs-haskell-src-bundled.install  libhugs-haskell98-bundled.README.Debian  libhugs-haskell98-bundled.install  libhugs-haxml-bundled.README.Debian  libhugs-haxml-bundled.examples  libhugs-haxml-bundled.install  libhugs-hgl-bundled.README.Debian  libhugs-hgl-bundled.examples  libhugs-hgl-bundled.install  (+30 more)
docs/: .cvsignore  Makefile.in  hugs.1.in  users-guide-windows.bat
docs/building/: config.txt  unix.txt  win32.txt
docs/users_guide/: .cvsignore  Makefile.in  faq.xml  haskell98.xml  htmlhelp.xsl  hugs-ug.css  hugs-ug.dsl  hugs-ug.xsl  hugs_ghc.xml  hugs_only.xml  introduction.xml  license.xml  miscellaneous.xml  options.xml  others.xml  users_guide.xml  using_hugs.xml  xml2sgml.sed
dotnet/: ANNOUNCE  License.net
dotnet/doc/: dotnet-ffi.html  dotnet-lib.html  dotnet.html  examples.html  style.css
dotnet/examples/basic/: Env.hs  Http.hs  HttpOld.hs  Mail.hs
dotnet/examples/callin/: CallIn.hs  print.cs
dotnet/examples/class/: NewObj.hs
dotnet/examples/delegate/: Delegate.hs  ui.cs
dotnet/examples/forms/: Forms.hs
dotnet/examples/xml/: XMLSyn.hs  Xml.hs
dotnet/lib/: Dotnet.hs
dotnet/lib/Dotnet/System/: Array.hs  Byte.hs  Char.hs  Console.hs  DateTime.hs  Decimal.hs  Double.hs  Enum.hs  IFormatProvider.hs  Int32.hs  Int64.hs  MarshalByRefObject.hs  Math.hs  Object.hs  ObjectTy.hs  Single.hs  String.hs  StringTy.hs  Type.hs  TypeCode.hs  TypeTy.hs  UInt32.hs  UInt64.hs  Uri.hs  UriHostNameType.hs  UriPartial.hs  ValueType.hs  Xml.hs
dotnet/tools/: App.cs  AssemblyInfo.cs  HsOutput.cs  Makefile  README.txt  TypeInfo.cs
fptools/hslibs/concurrent/: Makefile  Merge.lhs  Strategies.lhs  package.conf.in
fptools/hslibs/concurrent/doc/: concurrent.xml
fptools/hslibs/data/: FiniteMap.lhs  Makefile  Set.lhs  package.conf.in
fptools/hslibs/data/doc/: Edison.xml  FiniteMap.xml  Set.xml  data.xml
fptools/hslibs/data/edison/: COPYRIGHT.short  (+1 more)
fptools/hslibs/hssource/: Makefile  package.conf.in
fptools/hslibs/lang/: Addr.lhs  ByteArray.lhs  CTypesISO.hs  DirectoryExts.hs  Generics.hs  GlaExts.lhs  IOExts.hs  LazyST.hs  MArray.hs  Makefile  MutableArray.lhs  NumExts.lhs  PrelByteArr.lhs  ST.hs  SystemExts.lhs  TimeExts.lhs  package.conf.in
fptools/hslibs/net/: Makefile  package.conf.in
fptools/hslibs/posix/: .cvsignore  DL.hs  DLPrim.hs  Makefile  POpen.hs  Posix.lhs  PosixErr.lhs  PosixProcEnv.lhs  PosixProcPrim.lhs  PosixUtil.lhs  package.conf.in
fptools/hslibs/text/: Makefile  package.conf.in
fptools/hslibs/util/: Makefile  Memo.lhs  Observe.lhs  Readline.hs  Select.lhs  package.conf.in
include/: GreenCard.h
lib/exts/: Addr.hs  ForeignObj.hs
libraries/: Makefile.in  aclocal.m4  configure  configure.ac  pwd.hs
libraries/hugsbase/: hugsbase.cabal
libraries/hugsbase/Hugs/: Base.hs
libraries/include/: MachDeps.h  ghcconfig.h.in
libraries/tools/: config.in  convert_libraries  make_bootlib  make_oldlib  test_libraries
src/: .cvsignore  .gdbinit  Makefile.in  MkDepend.in  MkInstal.in  config.h.in  hugsscript.c  machdep.h  options.h.in  parser.y  platform.h.in
src/bcc32/: Makefile  config.bat  config.h  config.sh  iobjects.rsp  options.h  sobjects.rsp
src/djgpp2/: Makefile  config.bat  config.h  config.sh  options.h
src/dotnet/: .cvsignore  HugsServ.cpp  HugsServ.h  HugsWrapper.cpp  HugsWrapper.cs  HugsWrapper.h  Invoker.cpp  Invoker.h  Makefile  hugs.rc  options.h  prim.cpp  prim.h  runhugs.rc
src/epoc/: README  config.h  demos_readme  epoc.c  epoc.h  epoc_input.c  epoc_input.h  eshell_readme  hugs.mmp  hugs.pkg  options.h
src/machugs/: MoreFilesExtras.c  MoreFilesExtras.h  Optimization.h  config.h  hugs.mcp.xml  hugs.r  options.h
src/msc/: Makefile  README  config.bat  config.h  config.sh  echodate.c  ffihugs.bat  ffihugs.vcproj  hugs.dsp  hugs.dsw  hugs.sln  hugs.vcproj  options.h  platform.h  runhugs.dsp  runhugs.vcproj
src/unix/: .cvsignore  README  linking_notes  mkconfigs  mkunitable
src/winhugs/: DlgAbout.c  DlgMain.c  DlgOptions.c  Editors.c  General.c  Header.h  History.c  IORemap.c  Legacy.c  Makefile  MruFiles.c  Registry.c  RtfWindow.c  RtfWindow.h  StartCode.c  Winhugs.h  Winmenu.h  config.h  options.h  resource.h  resrc1.h  winhugs.rc  winhugs.sln  winhugs.vcproj
src/winhugs/installer/: FileCode.cpp  FileCode.h  InstallLog.cpp  InstallLog.h  Installer.rc  Installer.sln  Installer.vcproj  Parameters.h  Readme.txt  ShellCode.cpp  ShellCode.h  StartCode.cpp  resource.h
src/winhugs/register/: make.bat  register.c
src/winhugs/resource/: gc.cur  move.cur
src/winhugs/uninstaller/: CRC.cpp  DeleteOnReboot.cpp  Header.h  LinkedList.cpp  LinkedList.h  LogReader.cpp  LogReader.h  Parameters.h  ShellCode.cpp  StartCode.cpp  Uninstaller.rc  Uninstaller.sln  Uninstaller.vcproj  resource.h
tools/: ConvertLibs.hs  hugs-hc  prelude.patch
(+143 files in other folders)
